# clip-tools

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
app/: app.py
clip_tools/: __init__.py  blending.py  brush_dynamics.py  clip.md  constants.py  file_processor.py  io.py  processing.py  rendering.py  sqlite_records.py  types.py  utils.py
clip_tools/api/: clip_image.py  clip_layer.py
clip_tools/structs/: __init__.py  binc.py  blob_parsers.py  brush_attributes.py  chunk.py  encode_blocks.py  layer_blobs.py  layer_blocks.py  offscreen_attributes.py  resizable_image_attributes.py  text_attributes.py  vector.py
scripts/: playground.py
tests/: conftest.py  import_test.py  layer_test.py
tests/test_data/: test000.clip
