[project]
name = "clip-tools"
version = "0.0.0"
description = "Python package for working with CLIP STUDIO Paint files"
authors = [
    { name = "AnimeOps", email = "" }
]
dependencies = [
    "pandas",
    "numpy",
    "Pillow",
    "tqdm",
    "psd_tools",
    "shortuuid",
    "opencv-python",
    "scikit-image>=0.24.0",
]
readme = "README.md"
keywords = ["CLIP Studio Paint", "clip"]
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=clip_tools"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["PLC0415"]  # import-outside-top-level

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLC0415"]

[tool.mypy]
files = ["clip_tools/"]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
# Disabled error codes for gradual typing adoption
disable_error_code = [
    "var-annotated",
    "override",
    "arg-type",
    "assignment",
    "misc",
    "type-var",
    "call-overload",
    "return-value",
    "union-attr",
    "annotation-unchecked",
    "import-untyped",
    "import-not-found",
    "operator",
    "attr-defined",
    "index",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.11",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["clip_tools"]
